--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           python -m venv se_env
           source se_env/bin/activate
-          pip install -r requirements.txt
+          pip install -r ../../..requirements.txt
 
       - name: Generate API documentation
         run: |
