--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,9 +23,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m venv se_env
-          source se_env/bin/activate
-          pip install -r ../../..requirements.txt
+          python -m venv venv
+          source venv/bin/activate
+          pip install -r ../..requirements.txt
 
       - name: Generate API documentation
         run: |
