--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           python -m venv venv
           source venv/bin/activate
-          pip install -r ../..requirements.txt
+          pip install -r requirements.txt
 
       - name: Generate API documentation
         run: |
