--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Generate API documentation
         run: |
-          source se_env/bin/activate
+          source venv/bin/activate
           python software_engineering_list7/manage.py generateschema > docs.json
       - name: Commit and push documentation
         run: |
