--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,9 @@ jobs:
 
       - name: Commit and push documentation
         run: |
+          git config --global user.mail "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+          git add docs.json index.html
           git commit -m "Updated documentation"
           git push origin master
         env:
